# pyside-flow

./: .gitignore  Makefile  pyproject.toml
examples/basic/: main.py
examples/full/: gallery.ui  generate_ui.py  main.py
examples/widgets/Button/: app.ui  main.py
pysideflow/: __init__.py  app.py  generator.py  icons.py  models.py  utils.py
pysideflow/styles/: material.jinja
pysideflow/tokens/: __init__.py  elevation.py  shape.py  state.py  typography.py
tests/: test_app.py  test_generator.py  test_icons.py  test_models.py  test_typography.py  test_utils.py
